--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ __pycache__/
 node_modules/
 .github/
 cloudinary_python.txt
+password.txt
+css/
+        stream-one.html
+        stream-three.html
+        stream-two.html
